# StoryBook

./: .gitignore  setup.sh  start.sh  stop.sh
apps/higgs-tts/: .gitignore  Dockerfile  README.md  dev.Dockerfile  devcontainer.Dockerfile  requirements.txt  run.sh  server.py  stack.dev.yaml
apps/higgs-tts/inference_grpc/: __init__.py  compile_protos.py  inference_engine.proto  inference_engine_pb2.py  inference_engine_pb2.pyi  inference_engine_pb2_grpc.py
apps/higgs-tts/libs/audiocodec/: __init__.py
apps/higgs-tts/libs/audiotools/: post.py
apps/higgs-tts/libs/xcodec/: __init__.py  conv.py  decoder.py  (+4 more)
apps/higgs-tts/scripts/: audio_tokenizer_test.py  data_collator_test.py  generation_test.py  test_server.py  text_tokenizer_test.py
apps/screenplay-parser/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  chunking.py  config.py  database.py  gemini_qa.py  generate.py  main.py  models.py  pyproject.toml  screenplay_parser.py  stack.dev.yaml  store.py  telemetry.py
apps/screenplay-parser/inference_grpc/: compile_protos.py  inference_engine_pb2.py  inference_engine_pb2.pyi  inference_engine_pb2_grpc.py
apps/screenplay-viewer/: .env.local.example  .gitignore  package-lock.json  package.json
apps/screenplay-viewer/src/: instrumentation.ts  middleware.ts
infra/db/: Dockerfile  init-pgvector.sql  postgres.stack.dev.yaml
infra/telemetry/: aspire.stack.dev.yaml  grafana.stack.dev.yaml  prometheus.stack.dev.yaml
scripts/: setup.sh  start.sh  start_screenplay_viewer.sh  stop.sh
test-scripts/: main.py  pdfminer_screenplay_test.py  pyproject.toml
(+81 files in other folders)
